# SeQuilt

./: .gitignore  README.md  biome.json  chunk.ipynb  demo.ipynb  dna.ipynb  example.ipynb  graph.ipynb  language.ipynb  package.json  pnpm-lock.yaml  pyproject.toml  test.py  tsconfig.json  vite.config.json  vite.config.ts
seq/: __init__.py  config.py  dummy.py
seq/data/: __init__.py  overrulling.py  process.py  tokenizer.py
seq/data/dna/: tokenizer.py
seq/data/language/: __init__.py  process.py  tokenizer.py
seq/model/: Chunk.py  ChunkDatabase.py  Cluster.py  Event.py  EventGraph.py  Label.pyi  LabelModel.py  RectModel.py  Sequlet.py  Tokenized.py  Tokenized.pyi  TokenizedModel.py  TokenizerModel.py  Widget.py  __init__.py  __init__.pyi
seq/static/: style.css  widget.js
seq/utils/: __init__.py  clustering.py  distance.py  filtering.py  masking.py  sets.py  sorting.py
seqplat/: __init__.py  dummy.py
seqplat/data/: process.py
seqplat/model/: Event.py
sequilt/: Sequilt.py  __init__.py  dummy.py
sequilt/data/: BaseTokenizer.py  __init__.py  process.py
sequilt/data/dna/: __init__.py  tokenizer.py
sequilt/data/language/: tokenizer.py
sequilt/model/: Canvas.py  Event.py  EventCanvas.py  EventGraph.py  LabelModel.py  RectModel.py  Sequlet.py  SequletModel.py  __init__.py
sequilt/utils/: sets.py
sequilt/utils/__test__/: test_sets.py
widget/: store.ts  widget.css  widget.ts
widget/components/: Header.ts
widget/model/: Element.ts  IClassModel.ts  ILabel.ts  ILabelModel.ts  IPoint.ts  IRect.ts  IRectModel.ts  ISequlet.ts  IWidget.ts  IWidgetModel.ts  TSequenceModel.ts  event.ts  index.ts
widget/services/: getRescaledSequlets.ts
widget/utils/: getColorScheme.test.ts  getColorScheme.ts  getOutline.test.ts  getOutline.ts  getRescaledSequlets.test.ts  getRescaledSequlets.ts  index.ts
widget/view/: Legend.ts  Sequence.ts  SequenceView.ts  index.ts
