[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sequilt"
version = "0.0.0"
dependencies = ["anywidget", "networkx", "pydantic"]
readme = "README.md"

[project.optional-dependencies]
dev = ["watchfiles", "jupyterlab", "ruff", "pyright", "datasets", "pandas", "tokenizers", "nltk", "pytest"]

# automatically add the dev feature to the default env (e.g., hatch shell)
[tool.hatch.envs.default]
features = ["dev"]


[tool.hatch.build]
only-packages = true
artifacts = ["src/sequilt/static/*"]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["src/sequilt/static/widget.js"]
skip-if-exists = ["src/sequilt/static/widget.js"]
dependencies = ["hatch-jupyter-builder>=0.5.0"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
npm = "pnpm"
build_cmd = "build"


[tool.ruff]
src = ["sequilt"]
extend-include = ["*.pyi"]
exclude = [
    ".bzr",
    ".direnv",
    "widget",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 100
indent-width = 2
target-version = "py39"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "FA"]
ignore = ["F403"]
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


[tool.pyright]
include = ["sequilt/**/*.py"]
exclude = ["**/node_modules",
    "**/__pycache__",
    "sequilt/experimental",
    "sequilt/typestubs",
    "sequilt/typings",
    "sequilt/data",
]
reportMissingImports = true
reportMissingTypeStubs = false

pythonVersion = "3.9"